--- a/BancoDefinitivo5.ipynb
+++ b/BancoDefinitivo5.ipynb
@@ -15970,6 +15970,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products_sorted.rename(columns={'active_customer': 'active_customer_sorted'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###.rename(columns={'name': 'name1', 'address': 'address1'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 216,
    "metadata": {},
    "outputs": [
