--- a/Churn2.ipynb
+++ b/Churn2.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv('C:/Users/evive/Downloads/Nico y Juan/easyMoney/df_banc_rev.csv')"
+    "df=pd.read_csv('df_banc_rev.csv')"
    ]
   },
   {
@@ -2416,7 +2416,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x225c9393108>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1ae69d14848>"
       ]
      },
      "execution_count": 32,
@@ -2448,7 +2448,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2264e860588>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1aece967c08>"
       ]
      },
      "execution_count": 33,
@@ -2479,7 +2479,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x226646b9388>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1aee4257d88>"
       ]
      },
      "execution_count": 34,
@@ -5900,7 +5900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
@@ -5923,7 +5923,7 @@
       "\n",
       "[[77549  7754]\n",
       " [17450 40302]]\n",
-      "Time Taken : 64.58734273910522 seconds\n"
+      "Time Taken : 50.8185453414917 seconds\n"
      ]
     },
     {
@@ -5937,7 +5937,7 @@
        "               subsample=1.0, subsample_for_bin=200000, subsample_freq=0)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5980,7 +5980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6001,7 +6001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6013,7 +6013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -6035,7 +6035,7 @@
       "\n",
       "[[77544  7759]\n",
       " [16985 40767]]\n",
-      "Time Taken : 532.003809928894 seconds\n",
+      "Time Taken : 555.156548500061 seconds\n",
       "------------------------------------------------------------\n"
      ]
     }
@@ -6063,7 +6063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6078,7 +6078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 56,
    "metadata": {
     "scrolled": false
    },
@@ -6102,12 +6102,12 @@
       "\n",
       "[[79508  5795]\n",
       " [23131 34621]]\n",
-      "Time Taken : 76.80767130851746 seconds\n",
+      "Time Taken : 73.78986358642578 seconds\n",
       "------------------------------------------------------------\n",
       "DecisionTreeClassifier\n",
-      "Accuracy : 0.8195379399531648\n",
-      "CV Score : 0.8111656251613901\n",
-      "AUC Score :  0.8126005685903862\n",
+      "Accuracy : 0.8193911432665758\n",
+      "CV Score : 0.8112620289555682\n",
+      "AUC Score :  0.8123097029449986\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "         0.0       0.85      0.85      0.85     85303\n",
@@ -6117,26 +6117,26 @@
       "   macro avg       0.81      0.81      0.81    143055\n",
       "weighted avg       0.82      0.82      0.82    143055\n",
       "\n",
-      "[[72390 12913]\n",
-      " [12903 44849]]\n",
-      "Time Taken : 39.595149993896484 seconds\n",
+      "[[72429 12874]\n",
+      " [12963 44789]]\n",
+      "Time Taken : 45.15333342552185 seconds\n",
       "------------------------------------------------------------\n",
       "RandomForestClassifier\n",
-      "Accuracy : 0.8168466673656986\n",
-      "CV Score : 0.81570348947305\n",
-      "AUC Score :  0.8758321277828431\n",
+      "Accuracy : 0.8166299674950194\n",
+      "CV Score : 0.8149012721857838\n",
+      "AUC Score :  0.8759641473124469\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "         0.0       0.83      0.87      0.85     85303\n",
-      "         1.0       0.79      0.74      0.76     57752\n",
+      "         1.0       0.80      0.73      0.76     57752\n",
       "\n",
       "    accuracy                           0.82    143055\n",
       "   macro avg       0.81      0.80      0.81    143055\n",
       "weighted avg       0.82      0.82      0.82    143055\n",
       "\n",
-      "[[74307 10996]\n",
-      " [15205 42547]]\n",
-      "Time Taken : 29.42134928703308 seconds\n",
+      "[[74381 10922]\n",
+      " [15310 42442]]\n",
+      "Time Taken : 34.37977147102356 seconds\n",
       "------------------------------------------------------------\n"
      ]
     }
@@ -6167,6 +6167,20 @@
    "metadata": {},
    "source": [
     "### El mejor modelo ,segun el Accuracy , es XGBClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##La conclusion de este ROI; es que el nivek de abandono es muy elevado,cercano al 80%, y es mayor, en el caso de las\n",
+    "##mujeres, en la región de Barcelona y Valencia en mayor medida que en Madrid, que es la región que genera mas negocio,\n",
+    "##en las franjas de edad entre 20 y 28 años, los que tienen un nivel salarial mas bajo, son mas propensos a ser menos \n",
+    "###fieles, el entrychanne KHE, es el mas propenso a un churn, al igual que el producto em_acount, pero posiblemente, en\n",
+    "### estos 2 ultimos casos, es por un tema probabilistico, de que el canal mas utilizado para contactar con la compañia, \n",
+    "###y a su vez ,el producto más demandado."
    ]
   },
   {
